--- a/home.html
+++ b/home.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>Controlle Financeiro</title>
 </head>
 
 <body>
 
-    <h1>Julio Silva</h1>
-    <p>This is a paragraph.</p>
+    <h1>Home</h1>
 
 </body>
 
