Inserçao do conteudo da pagina home

--- a/home.html
+++ b/home.html
@@ -7,7 +7,8 @@
 
 <body>
 
-    <h1>Home</h1>
+    <h1>Controlle Financeiro</h1>
+    <p>Sistema básico de gestão financeira pessoal.</p>
 
 </body>
 
