--- a/cadastro-conta-bancaria.html
+++ b/cadastro-conta-bancaria.html
@@ -21,6 +21,10 @@
                 <label for="conta">Conta</label>
                 <input type="number" id="conta" placeholder="Digite o numero da conta"> 
             </div>
+            <div class="half-box">
+                <label for="tipodeconta">Tipo de Conta</label>
+                <input type="number" id="tipodeconta" placeholder="Digite o tipo da conta"> 
+            </div>
 
             <div class="half-box">
                 <label for="cartao">Numero do Cartão</label>
