--- a/cadastro-conta-bancaria.html
+++ b/cadastro-conta-bancaria.html
@@ -9,27 +9,35 @@
         <h1>Cadastre sua conta</h1>
         <form id="register-form">
             <div class="full-box">
+                <label for="cpf">CPF</label>
+                <input type="text" id="cpf" placeholder="Digite seu CPF"> 
+            </div>
+            <div class="full-box">
                 <label for="banco">Banco</label>
                 <input type="text" id="banco" placeholder="Digite o Nome do Banco"> 
             </div>
             <div class="full-box">
                 <label for="agencia">Agência</label>
-                <input type="number" id="agencia" placeholder="Digite a Agência"> 
+                <input type="text" id="agencia" placeholder="Digite a Agência"> 
             </div>
 
             <div class="half-box">
                 <label for="conta">Conta</label>
-                <input type="number" id="conta" placeholder="Digite o numero da conta"> 
-            </div>
-            <div class="half-box">
-                <label for="tipodeconta">Tipo de Conta</label>
-                <input type="number" id="tipodeconta" placeholder="Digite o tipo da conta"> 
+                <input type="text" id="conta" placeholder="Digite o numero da conta"> 
             </div>
 
             <div class="half-box">
                 <label for="cartao">Numero do Cartão</label>
-                <input type="number" id="cartao" placeholder="Digite o Numero do cartão"> 
+                <input type="text" id="cartao" placeholder="Digite o Numero do cartão"> 
             </div>
+
+            <label for="tipo-de-conta">Tipo de Conta</label> 
+            <select tipo de conta="select">
+                <option value="valor1">Cartão de credito</option>
+                <option value="valor2" selected>Conta corrente</option>
+                <option value="valor3">Poupança</option>
+              </select>
+
             <div class="full-box">
                 <input type="checkbox" id="agreement">
                 <label for="agreement">Eu li e aceito os termos de uso</label>
