Tela-de-cadastro.html

--- a/controlle-financeiro/tela-de-cadastro.html
+++ b/controlle-financeiro/tela-de-cadastro.html
@@ -46,7 +46,7 @@
     </div>
 
     <div>
-        <p>Ao criar a conta voce concorda <br> com nossos <a href="#">Termos e Politicas de Privacidades</a> </p>
+        <p>Ao criar a conta voce concorda com nossos <a href="#">Termos e Politicas de Privacidade</a> </p>
     </div>
     
 </body>
