checkbox 'mantenha-me conectado' foi adicionado

--- a/tela_de_login.html
+++ b/tela_de_login.html
@@ -13,7 +13,7 @@
         <br><br>
         <input type="password" placeholder="senha">
         <br><br>
-        <button>enviar</button>
+        <button>enviar</button>   <input type="checkbox" > <label for="checkbox">mantenha-me conectado</label>
         <br><br>
         <a href="">esqueceu a senha?</a>
     </div>
