Corrigindo erro no elemento div class form, repetição nos elemento laibel

--- a/cadastro-de-usuario/cadastro-de-usuario.html
+++ b/cadastro-de-usuario/cadastro-de-usuario.html
@@ -21,31 +21,31 @@
 
         <div class="form">
 
-            <label form="Nome">Nome</label>
+            <label form="nome">Nome</label>
             <div class="textbox">
                 <input type="text" name="nome" id="nome" placeholder="Digite seu Nome" required >
                 <div class="underline"></div>
             </div>
 
-            <label form="Nome">Senha</label>
+            <label form="password">Senha</label>
             <div class="textbox">
                 <input type="password" name="password" id="password" placeholder="Digite sua Senha" required >
                 <div class="underline"></div>
             </div>
 
-            <label form="Nome">Email</label>
+            <label form="email">Email</label>
             <div class="textbox">
                 <input type="email" name="email" id="email" placeholder="Digite seu Email" required >
                 <div class="underline"></div>
             </div>
 
-            <label form="Nome">Data de nascimento</label>
+            <label form="date">Data de nascimento</label>
             <div class="textbox">
                 <input type="date" name="date" id="date" placeholder="Coloque sua Data" required >
                 <div class="underline"></div>
             </div>
 
-            <label form="Nome">Numero de celular</label>
+            <label form="number">Numero de celular</label>
             <div class="textbox">
                 <input type="number" name="number" id="number" placeholder="Digite seu Numero" required >
                 <div class="underline"></div>
