--- a/cadastro-conta-bancaria.html
+++ b/cadastro-conta-bancaria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="C:\Users\pc\Desktop\Mentoria\css\style.css">
     
 
     <title>Cadastro de Conta Bancaria</title>
@@ -14,7 +14,7 @@
 
 <body>
 
-    <main class="container"> <img  align="right" width="100px" height="100px" src="C:\Users\pc\Desktop\TecnoRad\cartao.png">
+    <main class="container"> <img  align="right" width="100px" height="100px" src="C:\Users\pc\Desktop\Mentoria\cartao.png">
         
         <h1>Cadastre seu Cartão</h1>
 
