cadastro de usuario js

--- a/cadastro-de-usuario/cadastro-de-usuario.html
+++ b/cadastro-de-usuario/cadastro-de-usuario.html
@@ -51,7 +51,7 @@
                 <div class="underline"></div>
             </div>
 
-            <input class="btn" type="submit" value="CADASTRAR">
+            <input class="btn" type="button" value="CADASTRAR" onclick="onSubmit();">
 
         </div>
 
@@ -63,5 +63,6 @@
     </main>
 
 </body>
+<script src="cadastro-usuario.js"></script>
 
 </html>
