--- a/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
+++ b/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\pc\Desktop\Mentoria\css\style.css">
+    <link rel="stylesheet" href="C:\Users\pc\Desktop\Mentoria\controlle-financeiro\Cadastro-de-Conta_Bancaria\css\style.css">
     
 
     <title>Cadastro de Conta Bancaria</title>
