--- a/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
+++ b/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\pc\Desktop\Mentoria\controlle-financeiro\Cadastro-de-Conta_Bancaria\css\style.css">
+    <link rel="stylesheet" href="css\style.css">
     
 
     <title>Cadastro de Conta Bancaria</title>
@@ -56,10 +56,10 @@
                 </form>
 
                 <div class="half-box">
-                    <label form ="tipo-de-conta">Tipo de Conta &nbsp;</label> 
+                    <label form ="tipo-de-conta" id="tipodc">Tipo de Conta &nbsp;</label> 
                     <select tipoc="select">
-                        <option value="valor1">Poupança</option>
-                        <option value="valor2" selected>Conta corrente</option>
+                        <option value="valor1" id="poupanca">Poupança</option>
+                        <option value="valor2" selected id="contac">Conta corrente</option>
                       </select>
                     </div>
                     
@@ -70,12 +70,13 @@
                         <div class="underline"></div>
                     </div>
 
-          <input class="btn" type="submit" value="CADASTRAR">
+          <input class="btn" type="button" value="CADASTRAR" onclick="onSubmit();">
 
         </div>
 
     </main>
 
 </body>
+<script src="cadastro-de-conta-bancaria.js"></script>
 
 </html>
