--- a/tela_de_login/tela_de_login.html
+++ b/tela_de_login/tela_de_login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tela de login</title>
-    <link rel="stylesheet" href="style_tela_login.css"> 
+    <link rel="stylesheet" href="tela_de_login.css">
 </head>
 <body>
     <div>
