--- a/cadastro_de_transação/cadastro_de_transacao.html
+++ b/cadastro_de_transação/cadastro_de_transacao.html
@@ -12,19 +12,19 @@
         <h1>Cadastro de transação</h1><br>
         
         <label>Conta</label><br>
-        <select>
+        <select id="conta">
             <option value="conta 1">conta 1</option>
             <option value="conta 2">conta 2</option>
         </select><br><br>
 
         <label>Tipo de transação</label><br>
-        <select>
+        <select id="transação">
             <option value="pagamento">pagamento</option>
             <option value="recebimento">recebimento</option>
         </select><br><br>
 
         <label>Forma de pagamento</label><br>
-        <select>
+        <select id="pagamento">
             <option value="TED">TED</option>
             <option value="DOC">DOC</option>
             <option value="PIX">PIX</option>
@@ -32,13 +32,13 @@
         </select><br><br>
 
         <label>Data e hora</label><br>
-        <input type="datetime-local"><br><br>
+        <input type="datetime-local" id="datetime"><br><br>
 
         <label>Valor</label><br>
-        <input type="text"><br><br>
+        <input type="text" id="text"><br><br>
 
         <label>Descrição</label><br>
-        <textarea></textarea><br><br>
+        <textarea id="textarea"></textarea><br><br>
 
         <button>enviar</button>
     </div>
