--- a/cadastro_de_transação/cadastro_de_transacao.html
+++ b/cadastro_de_transação/cadastro_de_transacao.html
@@ -40,7 +40,7 @@
         <label>Descrição</label><br>
         <textarea id="textarea"></textarea><br><br>
 
-        <button>enviar</button>
+        <button onclick="onsubmit();">enviar</button>
     </div>
     <script src="cadastro_de_transacao.js"></script>
 </body>
