ajustes no arquivo .js e mudanças no botão

--- a/cadastro_de_transação/cadastro_de_transacao.html
+++ b/cadastro_de_transação/cadastro_de_transacao.html
@@ -39,8 +39,8 @@
 
         <label>Descrição</label><br>
         <textarea id="textarea"></textarea><br><br>
-
-        <button onclick="onsubmit();">enviar</button>
+        
+        <input class="btn" type="button" id="enviar" onclick="onsubmit();">
     </div>
     <script src="cadastro_de_transacao.js"></script>
 </body>
