criação do arquivo .js

--- a/tela_de_login/tela_de_login.html
+++ b/tela_de_login/tela_de_login.html
@@ -14,7 +14,7 @@
         <br><br>
         <input type="password" placeholder="senha">
         <br><br>
-        <button>enviar</button>
+        <input type="button" value="entrar" class="btn" onclick="onSubmit();">
         <br><br>
         <input type="checkbox" > <label for="checkbox">mantenha-me conectado</label>
         <br><br>
