--- a/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
+++ b/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
@@ -56,10 +56,10 @@
                 </form>
 
                 <div class="half-box">
-                    <label form ="tipo-de-conta" id="tipodc">Tipo de Conta &nbsp;</label> 
-                    <select tipoc="select">
-                        <option value="valor1" id="poupanca">Poupança</option>
-                        <option value="valor2" selected id="contac">Conta corrente</option>
+                    <label form ="tipo-de-conta" >Tipo de Conta &nbsp;</label> 
+                    <select  id="tipodc" >
+                        <option value="poupanca" id="poupanca">Poupança</option>
+                        <option value="contaCorrente" selected id="contac">Conta corrente</option>
                       </select>
                     </div>
                     
