Atualização origen da imagem

--- a/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
+++ b/Cadastro-de-Conta_Bancaria/cadastro-conta-bancaria.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <main class="container"> <img  align="right" width="100px" height="100px" src="C:\Users\pc\Desktop\Mentoria\cartao.png">
+    <main class="container"> <img  align="right" width="100px" height="100px" src="cartao.png">
         
         <h1>Cadastre seu Cartão</h1>
 
