Adicionando Jquery a pasta bootstrap js

--- a/cadastro-de-usuario/cadastro-de-usuario.html
+++ b/cadastro-de-usuario/cadastro-de-usuario.html
@@ -21,7 +21,7 @@
 
         <div class="form">
 
-            <label form="nome">Nome</label>
+            <label form="nome">Nome <a href=""></a> </label>
             <div class="textbox">
                 <input type="text" name="nome" id="nome" placeholder="Digite seu Nome" required >
                 <div class="underline"></div>
