--- a/tela_de_login/tela_de_login.html
+++ b/tela_de_login/tela_de_login.html
@@ -10,11 +10,11 @@
 <body>
     <div>
         <h1>login</h1>
-        <input type="text" placeholder="email">
+        <input type="text" placeholder="email" id="email">
         <br><br>
-        <input type="password" placeholder="senha">
+        <input type="password" placeholder="senha" id="senha">
         <br><br>
-        <input type="button" value="entrar" class="btn" onclick="onSubmit();">
+        <input type="button" value="entrar" class="btn" onclick="logar (this.form);">
         <br><br>
         <input type="checkbox" > <label for="checkbox">mantenha-me conectado</label>
         <br><br>
