--- a/cadastro-de-categoria/cadastro-de-categoria.html
+++ b/cadastro-de-categoria/cadastro-de-categoria.html
@@ -9,23 +9,16 @@
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <!--BOOTSTRAP JQUERY JS-->
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="bootstrap/jquery-3.3.1.min.js"></script>
-		<script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
-		<script type="text/javascript" src="bootstrap/jquery.mask.min.js"></script>	
-		<script type="text/javascript">
-		$(document).ready(function(){
-			$("#salario").mask("999.999.990,00", {reverse: true})
-		})
-		</script>
-
     <!--FONT ICON-->
-
     <link rel="stylesheet" type="text/css" href="css/fontawesome.all.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
-    
+
+    <!--BOOTSTRAP JQUERY JS-->
+    <link href="bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="..//bootstrap/js/jquery-3.3.1.min.js"></script>
+		<script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../bootstrap/js/jquery.mask.min.js"></script> 
 </head>
 <body>
     <main class="container">
@@ -51,6 +44,7 @@
                     <option value="transporte" selected id="transporte">Transporte</option>
                     <option value="empresa" selected id="empresa">Empresa</option>
                     <option value="outros" selected id="outros">Outros</option>
+                    <input type="text" name="value" id="nome" placeholder="Opcional">
                   </select>
             </div>
                 
