Implementaçao de fetch de cadastro de usuario

--- a/cadastro-de-usuario/cadastro-de-usuario.html
+++ b/cadastro-de-usuario/cadastro-de-usuario.html
@@ -39,7 +39,7 @@
                 <div class="underline"></div>
             </div>
 
-            <label form="date">Data de nascimento</label>
+            <!-- <label form="date">Data de nascimento</label>
             <div class="textbox">
                 <input type="date" name="date" id="date" placeholder="Coloque sua Data" required >
                 <div class="underline"></div>
@@ -49,16 +49,16 @@
             <div class="textbox">
                 <input type="number" name="number" id="number" placeholder="Digite seu Numero" required >
                 <div class="underline"></div>
-            </div>
+            </div> -->
 
             <input class="btn" type="button" value="CADASTRAR" onclick="onSubmit();">
 
         </div>
 
-        <div class="checkbox">
+        <!-- <div class="checkbox">
             <input type="checkbox" name="checkbox" id="checkbox">
             <label for="checkbox">Li e aceito os <a href="#">Termos de privacidade</a> </label>
-        </div>
+        </div> -->
 
     </main>
 
